# LLM-4-ESG-in-AM

./: .gitignore  Desktop.ini  Dockerfile  Makefile  README.md  app.py  debug.py  docker-compose.yml  fix_config.py  pyproject.toml
.streamlit/: config.toml
config/: esg_criteria.json  settings.py
results/1Y_ROLLING/14_over_100/: 2025-12-11T11-40_export.csv
results/1Y_ROLLING/51_over_100/: 2025-12-11T11-40_export.csv
results/1Y_ROLLING/68_over_100/: 2025-12-11T11-40_export.csv
results/3Y_ROLLING/14_over_100/: 2025-12-11T10-41_export.csv
scripts/: check_db.py  run_esg_pipeline.py  run_hrp_demo.py  test_maths.py
src/collector/: __init__.py  llm_analyzer.py  loader.py  scraper.py
src/engine/: __init__.py  api_server.py  backtester.py  db_manager.py  hrp_optimizer.py  utils.py
