[tool.poetry]
name = "llm-4-esg-in-am"
version = "0.1.0"
description = "Hierarchical Risk Parity Portfolio Optimizer with LLM-driven ESG Filtering."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core Data and Quant
pandas = "^2.1.0"
numpy = "^1.26.0"
scipy = "^1.11.0"
yfinance = "^0.2.36"

# Database and Persistence
sqlalchemy = "^2.0.25"        # ORM for PostgreSQL interaction
asyncpg = "^0.29.0"           # Async driver for PostgreSQL
psycopg2-binary = "^2.9.9"     # Postgres driver

# Web/API
fastapi = "^0.104.0"
uvicorn = "^0.27.0"
httpx = "^0.27.0"             # Async client for web requests

# Scraping/LLM (Production & Enterprise requirements)
playwright = "^1.41.0"
openai = "^1.10.0"
tiktoken = "^0.6.0"           # Token counting for LLM cost control
pydantic = "^2.6.1"           # Core validation
pydantic-settings = "^2.2.1"   # Configuration management

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
black = "^24.2.0"
ruff = "^0.2.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"