[tool.poetry]
name = "llm-4-esg-in-am"
version = "0.1.0"
description = "Hierarchical Risk Parity portfolio optimizer with LLM-based ESG filtering."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

# Core data and quantitative analytics
pandas = "^2.1.0"
numpy = "^1.26.0"
scipy = "^1.11.0"
yfinance = "^0.2.36"

# Database and persistence
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"

# API and web framework
fastapi = "^0.104.0"
uvicorn = "^0.27.0"
httpx = "^0.27.0"

# Scraping and LLM integration
playwright = "^1.41.0"
openai = "^1.10.0"
tiktoken = "^0.6.0"
pydantic = "^2.6.1"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
black = "^24.2.0"
ruff = "^0.2.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
